<resources>
    <string name="app_name">FAS</string>
    <string name="todo">TODO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Long lorem ipsum text -->
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- New strings added -->
    <string name="user_name_label">Name</string> <!-- Renamed from name to user_name_label -->
    <string name="forgot_password">Forgot Password</string>
    <string name="value">Value</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="prn">PRN</string>
    <string name="enter_your_prn">Enter Your PRN</string>
    <string name="user_password">Password</string> <!-- Renamed from password to user_password -->
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_prompt">Forgot Password?</string> <!-- Renamed from forgot_password1 to forgot_password_prompt -->
    <string name="user_email">Email</string> <!-- Renamed from email to user_email -->
    <string name="enter_your_email">Enter Your Email</string>
    <string name="login_prompt">Login</string> <!-- Renamed from login1 to login_prompt -->
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="time_table">Time Table</string>
    <string name="announcement">Announcement</string> <!-- Fixed typo from announcment to announcement -->
    <string name="division_a">DIV_A</string> <!-- Fixed double quote in string -->
    <string name="bca_third_year">bca_ty</string> <!-- Fixed double quote in string -->
    <string name="user_full_name">Name: Nidhi Shree Roy</string> <!-- Renamed from name to user_full_name -->
    <string name="user_course">Course: BCA</string> <!-- Renamed from course to user_course -->
    <string name="user_year">Year: 3rd year</string> <!-- Renamed from year to user_year -->
    <string name="user_division">Division: A</string> <!-- Renamed from division to user_division -->
    <string name="user_email_info">Email: abc@gmail.com</string> <!-- Renamed from email to user_email_info -->
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="material">Material</string>
    <string name="profile">Profile</string>

</resources>
